2005/01/09  ***** v3.0.0 shipped *****

2015/01/03  fadden
    - Mac OS X: replace Carbon FinderInfo calls with BSD xattr.
    - Mac OS X: fix resource fork naming.
    - Mac OS X: disable use of native resource forks.

2015/01/02  fadden
    - Distinguish Unicode and Mac OS Roman strings.

2014/12/22  fadden
    - Source code cleanup.

2014/10/30  ***** v2.2.2 shipped *****

2014/10/28  fadden
    - Switched from CVS on sourceforge to github.
    - Updated configure scripts and makefiles.

2007/02/19  ***** v2.2.0 shipped *****

2007/02/19  fadden
    - Auto-detect and handle "bad Mac" archives.
    - Switched from LGPL to BSD license.

2006/12/02  fadden
    - Check for overrun when unpacking RLE.

2006/02/18  ***** v2.1.1 shipped *****

2006/02/18  fadden
    - Correct a wayward assert.  (Changing the filetype of a file from an
      HFS disk, which has zero-length data fork, falsely triggered the
      assert.)

2005/09/17  ***** v2.1.0 shipped *****

2005/09/17  fadden
    - Added "kNuValIgnoreLZW2Len" flag, which enables NuLib2 to handle
      archives created by an unknown but badly broken program.
    - Fixed build for gcc v4.0.

2004/10/11  ***** v2.0.3 shipped *****

2004/09/25  fadden
    - Fixed: attempting to add files after deleting *all* entries in an
      archive would fail.
    - Removed use of a "ushort" from NufxLib.h.

2004/09/20  fadden
    - Corrected behavior after flush when original archive can't be
      deleted.

2004/09/09  fadden
    - Added header offset and junk offset to NuGetAttr.

2004/08/22  fadden
    - Fixed obscure bug when recompressing a GSHK-added zero-length file
      when "fake threads" is enabled.

2004/03/10  ***** v2.0.2 shipped *****

2004/03/09  fadden
    - Set access permissions based on umask when extracting a "locked"
      file.  My thanks to Matthew Fischer for sending a patch.
    - Reject archives with a MasterEOF == 48, not <= 48.  There are