@@ -143,7 +143,7 @@ static void Usage(const NulibState* pState)
     printf("\nNuLib2 v%s, linked with NufxLib v%d.%d.%d [%s]\n",
         NState_GetProgramVersion(pState),
         majorVersion, minorVersion, bugVersion, nufxLibFlags);
-    printf("Copyright (C) 2000-2014, Andy McFadden.  All Rights Reserved.\n");
+    printf("Copyright (C) 2000-2015, Andy McFadden.  All Rights Reserved.\n");
     printf("This software is distributed under terms of the BSD License.\n");
     printf("Visit http://www.nulib.com/ for source code and documentation.\n\n");
     printf("Usage: %s -command[modifiers] archive [filename-list]\n\n",
