@@ -1,4 +1,7 @@
-2005/01/09  ***** v3.0.0 shipped *****
+2015/12/26  fadden
+    - Fix handling of entries with missing threads.
+
+2015/01/09  ***** v3.0.0 shipped *****
 
 2015/01/03  fadden
     - Mac OS X: get file/aux type from FinderInfo when adding files.
